<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_available_devices_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/availableDevicesImage"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        app:layout_constraintTop_toTopOf="@id/availableDevicesImage"
        app:layout_constraintStart_toEndOf="@id/availableDevicesImage"
        android:text="@string/shield"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        android:id="@+id/deviceName"
        />

    <TextView
        android:id="@+id/deviceDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/shield_android_tv"
        app:layout_constraintBottom_toBottomOf="@+id/availableDevicesImage"
        app:layout_constraintStart_toEndOf="@id/availableDevicesImage"
        app:layout_constraintTop_toBottomOf="@id/deviceName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connecting"
        android:id="@+id/connectingText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:visibility="gone"
        />

    <TextView
        android:layout_width="80dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:background="@drawable/group_26"
        android:text="@string/connect"
        android:gravity="center"
        />



</androidx.constraintlayout.widget.ConstraintLayout>