<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:layout_width="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/group_26"
        android:id="@+id/yellowBox"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/yellowBox"
        app:layout_constraintStart_toStartOf="@id/yellowBox"
        app:layout_constraintEnd_toEndOf="@id/yellowBox"
        android:id="@+id/fetchingDevices"
        android:text="@string/fetching_devices"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_marginTop="24dp"
        />

    <TextView
        android:id="@+id/waiting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:lines="2"
        android:gravity="center"
        android:text="@string/waiting_for_5_seconds"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="@+id/fetchingDevices"
        app:layout_constraintStart_toStartOf="@+id/fetchingDevices"
        app:layout_constraintTop_toBottomOf="@id/fetchingDevices" />

    <TextView
        android:id="@+id/cancelButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/group_26"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/cancel"
        android:gravity="center"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/yellowBox"
        app:layout_constraintEnd_toEndOf="@id/waiting"
        app:layout_constraintStart_toStartOf="@id/waiting"
        app:layout_constraintTop_toBottomOf="@id/waiting" />


</androidx.constraintlayout.widget.ConstraintLayout>