<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:layout_width="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="140dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/group_26"
        android:id="@+id/yellowBox"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/yellowBox"
        app:layout_constraintStart_toStartOf="@id/yellowBox"
        app:layout_constraintEnd_toEndOf="@id/yellowBox"
        android:id="@+id/sureToDeleteText"
        android:text="@string/sure_to_delete_this_file_from_recent"
        android:textStyle="bold"
        android:textSize="16dp"
        android:layout_marginTop="24dp"
        />


    <TextView
        android:id="@+id/noButton"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:background="@drawable/group_26"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="12dp"
        android:text="@string/no"
        android:gravity="center"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/yellowBox"
        app:layout_constraintStart_toStartOf="@id/yellowBox"
        app:layout_constraintTop_toBottomOf="@id/sureToDeleteText" />
    <TextView
        android:id="@+id/yesButton"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:background="@drawable/group_26"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/yes"
        android:gravity="center"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/yellowBox"
        app:layout_constraintEnd_toEndOf="@id/yellowBox"
        app:layout_constraintTop_toBottomOf="@id/sureToDeleteText" />

</androidx.constraintlayout.widget.ConstraintLayout>